# Space_Invaders

./: CMakeLists.txt
include/: alien.h  game.h  invaders.h  laser.h  spaceship.h
src/: alien.cpp  game.cpp  laser.cpp  main.cpp  spacship.cpp
